Fix for size of menu button on mobile view

--- a/main.css
+++ b/main.css
@@ -186,7 +186,7 @@ section {
   border: none;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
   section {
     padding: 1rem;
   }
@@ -214,7 +214,8 @@ section {
 
   .navBtn {
     background-color: rgba(0, 128, 128, 0.8);
-    padding: 5px 14px;
+    font-size: 1.5rem;
+    padding: 5px 20px;
     border-radius: 0 0 5px 5px;
     display: flex;
   }
